--- a/style.css
+++ b/style.css
@@ -81,3 +81,10 @@ footer img{
     padding-left: 4px;
     padding-right: 4px;
 }
+
+@media (min-width: 700px){
+    .tarjeta{
+        width: 25%;
+    }
+}
+
